src/objects/Price_Kit__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Price Kit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Price Kit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Kits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>